--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
 Flask-Bcrypt==0.5.2
+Flask-DebugToolbar==0.8.0
 Flask-Login==0.2.6
 Flask-Script==0.5.3
 Flask-WTF==0.8.4
@@ -9,6 +10,8 @@ SQLAlchemy==0.8.2
 WTForms==1.0.4
 Werkzeug==0.9.3
 argparse==1.2.1
+blinker==1.3
 itsdangerous==0.22
 py-bcrypt==0.3
+tornado==3.1
 wsgiref==0.1.2
