--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,64 @@
-Flask==0.10.1
-Flask-Bcrypt==0.5.2
-Flask-DebugToolbar==0.8.0
-Flask-Login==0.2.6
-Flask-Script==0.5.3
-Flask-WTF==0.8.4
+Beaker==1.6.4
+BeautifulSoup==3.2.1
+CherryPy==3.2.2
 Jinja2==2.7
-MarkupSafe==0.18
-SQLAlchemy==0.8.2
-WTForms==1.0.4
-Werkzeug==0.9.3
+Mako==0.8.0
+Markdown==2.3.1
+MarkupSafe==0.15
+PIL==1.1.7
+PyYAML==3.10
+Pygments==1.6
+Pyrex==0.9.9
+Sonata==1.6.2.1
+arandr==0.1.7.1
 argparse==1.2.1
-blinker==1.3
-itsdangerous==0.22
-py-bcrypt==0.3
-tornado==3.1
+batti==0.3.8
+bzr==2.5.1
+caffeine==2.4.1
+commando==0.3.2a
+cssselect==0.8
+cssutils==0.9.10
+distribute==0.6.39
+dnspython==1.10.0
+fontforge==1.0
+gdata==2.0.17
+git-remote-helpers==0.1.0
+graphy==1.0
+gunicorn==17.5
+httplib2==0.8
+hyde==0.8.4
+ipython==0.13.2
+kaa-base==0.6.0
+kaa-metadata==0.7.7
+key-mon==1.16
+lxml==3.1.2
+mechanize==0.2.5
+mercurial==2.6
+mutagen==1.21
+namebench==1.3.1
+netifaces==0.8
+netsnmp-python==1.0a1
+psutil==0.7.1
+py-rrdtool==0.2.1
+pyalsaaudio==0.7
+pygobject==3.8.2
+pysane==2.0
+python-dateutil==2.1
+python-mpd==0.3.0
+python-xlib==0.15rc1
+pyxdg==0.25
+pyzmq==13.0.2
+reportlab==2.6
+simplejson==3.2.0
+six==1.3.0
+smartypants==1.6.0.3
+stevedore==0.8
+tagpy==0.94.8
+typogrify-hyde==1.0.1a
+urwid==1.1.1
+virtualenv==1.9.1
+virtualenv-clone==0.2.4
+virtualenvwrapper==3.7.1
+volume-applet==0.6.1
+wicd==1.7.2.4
 wsgiref==0.1.2
