--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Flask==0.10.1
 Flask-Admin==1.0.6
-Flask-Bcrypt==0.5.2
 Flask-DebugToolbar==0.8.0
-Flask-Login==0.2.6
+Flask-SQLAlchemy==1.0
 Flask-Script==0.5.3
 Flask-WTF==0.8.4
 Jinja2==2.7
@@ -12,7 +11,10 @@ WTForms==1.0.4
 Werkzeug==0.9.3
 argparse==1.2.1
 blinker==1.3
+coverage==3.6
 itsdangerous==0.22
+multiprocessing==2.6.2.1
+nose==1.3.0
 py-bcrypt==0.3
 tornado==3.1
 wsgiref==0.1.2
