--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Fabric==1.7.0
 Flask==0.10.1
 Flask-Admin==1.0.6
 Flask-DebugToolbar==0.8.0
@@ -12,9 +13,12 @@ Werkzeug==0.9.3
 argparse==1.2.1
 blinker==1.3
 coverage==3.6
+gunicorn==17.5
 itsdangerous==0.22
 multiprocessing==2.6.2.1
 nose==1.3.0
+paramiko==1.11.0
 py-bcrypt==0.3
+pycrypto==2.6
 tornado==3.1
 wsgiref==0.1.2
