--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,13 @@ argparse==1.2.1
 blinker==1.3
 coverage==3.6
 gunicorn==17.5
+ipython==1.0.0
 itsdangerous==0.22
 multiprocessing==2.6.2.1
 nose==1.3.0
 paramiko==1.11.0
+psycopg2==2.5.1
+py-bcrypt==0.3
 pycrypto==2.6
 tornado==3.1
 wsgiref==0.1.2
